--- a/CoffeeAndCode.ipynb
+++ b/CoffeeAndCode.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 118,
    "id": "58351f4a",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,12 @@
     "# import liberies\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 119,
    "id": "71571793",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 120,
    "id": "acd77cb7",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "4      Turkish              No    Male  Lebanon  18 to 29  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 121,
    "id": "469c582c",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "(100, 9)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 122,
    "id": "10c45946",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 123,
    "id": "39018ba9",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 124,
    "id": "ec7d12f2",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 125,
    "id": "8ee82d29",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 126,
    "id": "0106c262",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 127,
    "id": "08ad1c6f",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 128,
    "id": "445e4760",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "0.31369165125626997"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,17 +458,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 129,
    "id": "22fbdc18",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1ae7ffdead0>"
+       "<matplotlib.collections.PathCollection at 0x2c46725e740>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 130,
    "id": "cfa8e39f",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 131,
    "id": "567af026",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 132,
    "id": "75753251",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 133,
    "id": "e09b48ea",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
        "array(['Sometimes', 'Yes', 'No'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 134,
    "id": "980574b4",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 135,
    "id": "cfb7d0b5",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 136,
    "id": "3905253b",
    "metadata": {},
    "outputs": [
@@ -728,6 +728,311 @@
     "ax.set_ylabel(\"Number of people\")\n",
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "b8436ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "cbfb74e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CodingHours</th>\n",
+       "      <th>CoffeeCupsPerDay</th>\n",
+       "      <th>CoffeeTime</th>\n",
+       "      <th>CodingWithoutCoffee</th>\n",
+       "      <th>CoffeeType</th>\n",
+       "      <th>CoffeeSolveBugs</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>AgeRange</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    CodingHours  CoffeeCupsPerDay  CoffeeTime  CodingWithoutCoffee  \\\n",
+       "0             8                 2           3                    2   \n",
+       "1             3                 2           3                    2   \n",
+       "2             5                 3           6                    0   \n",
+       "3             8                 2           3                    0   \n",
+       "4            10                 3           6                    1   \n",
+       "..          ...               ...         ...                  ...   \n",
+       "95            6                 2           3                    2   \n",
+       "96            4                 1           3                    1   \n",
+       "97           10                 3           3                    2   \n",
+       "98            2                 2           6                    1   \n",
+       "99           10                 4           3                    1   \n",
+       "\n",
+       "    CoffeeType  CoffeeSolveBugs  Gender  Country  AgeRange  \n",
+       "0            2                1       0        0         0  \n",
+       "1            1                2       0        0         1  \n",
+       "2            6                2       0        0         0  \n",
+       "3            6                2       1        0         5  \n",
+       "4            7                0       1        0         0  \n",
+       "..         ...              ...     ...      ...       ...  \n",
+       "95           6                2       1        0         0  \n",
+       "96           6                1       0        0         0  \n",
+       "97           3                2       1        0         4  \n",
+       "98           5                1       0        0         0  \n",
+       "99           4                1       1        0         0  \n",
+       "\n",
+       "[100 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "copy_df = df\n",
+    "NumericDatas = df[['CodingHours', 'CoffeeCupsPerDay']]\n",
+    "nominalDatas= copy_df.drop(columns=['CodingHours','CoffeeCupsPerDay'])\n",
+    "nominalDatas = nominalDatas.apply(LabelEncoder().fit_transform)\n",
+    "allNumdf = pd.concat([NumericDatas, nominalDatas], axis=1)\n",
+    "allNumdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "d2d77923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=allNumdf.drop(columns= ['CoffeeSolveBugs','CoffeeTime'])\n",
+    "y=allNumdf['CoffeeSolveBugs']\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.15, random_state=45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "dab7f8c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "clf = DecisionTreeClassifier()\n",
+    "# Train Decision Tree Classifer\n",
+    "clf = clf.fit(x_train,y_train)\n",
+    "y_pred = clf.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "d017cc30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.50      0.17      0.25         6\n",
+      "           1       0.22      0.50      0.31         4\n",
+      "           2       0.50      0.40      0.44         5\n",
+      "\n",
+      "    accuracy                           0.33        15\n",
+      "   macro avg       0.41      0.36      0.33        15\n",
+      "weighted avg       0.43      0.33      0.33        15\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import *\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "f758dd55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.33333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy=accuracy_score(y_pred,y_test)*100\n",
+    "print(accuracy)"
    ]
   }
  ],
