--- a/CoffeeAndCode.ipynb
+++ b/CoffeeAndCode.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "id": "58351f4a",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "id": "71571793",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "id": "acd77cb7",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "4      Turkish              No    Male  Lebanon  18 to 29  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "id": "469c582c",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "(100, 9)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "id": "10c45946",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "id": "39018ba9",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "id": "ec7d12f2",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "id": "8ee82d29",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "id": "0106c262",
    "metadata": {},
    "outputs": [
@@ -385,16 +385,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc07dc01",
    "metadata": {},
    "source": [
-    "## Coffee Cups Per Day"
+    "## Coffee Cups Per Day\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "id": "08ad1c6f",
    "metadata": {},
    "outputs": [
@@ -434,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "id": "445e4760",
    "metadata": {},
    "outputs": [
@@ -444,7 +446,7 @@
        "0.31369165125626997"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,17 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "id": "22fbdc18",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2c46725e740>"
+       "<matplotlib.collections.PathCollection at 0x1d847530040>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -501,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "id": "cfa8e39f",
    "metadata": {},
    "outputs": [
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 15,
    "id": "567af026",
    "metadata": {},
    "outputs": [
@@ -555,7 +557,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 16,
    "id": "75753251",
    "metadata": {},
    "outputs": [
@@ -610,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 17,
    "id": "e09b48ea",
    "metadata": {},
    "outputs": [
@@ -620,7 +622,7 @@
        "array(['Sometimes', 'Yes', 'No'], dtype=object)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "id": "980574b4",
    "metadata": {},
    "outputs": [
@@ -667,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 19,
    "id": "cfb7d0b5",
    "metadata": {},
    "outputs": [
@@ -686,7 +688,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 20,
    "id": "3905253b",
    "metadata": {},
    "outputs": [
@@ -731,19 +733,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 137,
-   "id": "b8436ad0",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d13f113b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n"
+    "## Classification\n",
+    "---\n",
+    "Train a Classification Model wit Decition Tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 21,
    "id": "cbfb74e8",
    "metadata": {},
    "outputs": [
@@ -947,12 +949,13 @@
        "[100 rows x 9 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
     "copy_df = df\n",
     "NumericDatas = df[['CodingHours', 'CoffeeCupsPerDay']]\n",
     "nominalDatas= copy_df.drop(columns=['CodingHours','CoffeeCupsPerDay'])\n",
@@ -963,20 +966,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 30,
    "id": "d2d77923",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
     "x=allNumdf.drop(columns= ['CoffeeSolveBugs','CoffeeTime'])\n",
     "y=allNumdf['CoffeeSolveBugs']\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.15, random_state=45)"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.15, random_state=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 31,
    "id": "dab7f8c0",
    "metadata": {},
    "outputs": [],
@@ -990,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 32,
    "id": "d017cc30",
    "metadata": {},
    "outputs": [
@@ -1000,13 +1004,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.50      0.17      0.25         6\n",
-      "           1       0.22      0.50      0.31         4\n",
-      "           2       0.50      0.40      0.44         5\n",
+      "           0       0.20      0.17      0.18         6\n",
+      "           1       0.38      0.75      0.50         4\n",
+      "           2       0.50      0.20      0.29         5\n",
       "\n",
       "    accuracy                           0.33        15\n",
-      "   macro avg       0.41      0.36      0.33        15\n",
-      "weighted avg       0.43      0.33      0.33        15\n",
+      "   macro avg       0.36      0.37      0.32        15\n",
+      "weighted avg       0.35      0.33      0.30        15\n",
       "\n"
      ]
     }
@@ -1018,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 33,
    "id": "f758dd55",
    "metadata": {},
    "outputs": [
